fixed modal behind table

--- a/src/components/styles/ModalContainer.module.css
+++ b/src/components/styles/ModalContainer.module.css
@@ -1,6 +1,7 @@
 .background {
   background: #00000075;
   position: fixed;
+  z-index: 10;
   inset: 0;
   display: flex;
   justify-content: center;
